# jensen

./: .gitignore  CMakeLists.txt  COPYING  README.md  README.txt  license.txt  testing
data/: 20newsgroup.label  heart_scale.feat  heart_scale.label
examples/: ClassificationCrossValExample.cc  ClassificationExample.cc  ClassificationLibSVMExample.cc  TestClassification.cc  TestClassificationLibSVM.cc  TestL1HuberSVMLoss.cc  TestL1LeastSquaresLoss.cc  TestL1LogisticLoss.cc  TestL1ProbitLoss.cc  TestL1SmoothSVMLoss.cc  TestL2HingeSVMLoss.cc  TestL2HingeSVRLoss.cc  TestL2HuberSVMLoss.cc  TestL2LeastSquaresLoss.cc  TestL2LogisticLoss.cc  TestL2ProbitLoss.cc  TestL2SmoothSVMLoss.cc  TestL2SmoothSVRLoss.cc
src/: jensen.h
src/machinelearning/: Classifiers.cc  Classifiers.h  machineLearning.h
src/machinelearning/SVM/: L1SmoothSVM.cc  L1SmoothSVM.h  L2HingeSVM.cc  L2HingeSVM.h  L2SmoothSVM.cc  L2SmoothSVM.h
src/machinelearning/logisticRegression/: L1LogisticRegression.cc  L1LogisticRegression.h  L2LogisticRegression.cc  L2LogisticRegression.h  LogisticRegression.cc  LogisticRegression.h
src/optimization/contAlgorithms/: cg.cc  cg.h  contAlgorithms.h  gd.cc  gd.h  gdBarzilaiBorwein.cc  gdBarzilaiBorwein.h  gdLineSearch.cc  gdLineSearch.h  gdNesterov.cc  gdNesterov.h  lbfgsMin.cc  lbfgsMin.h  lbfgsMinOwl.cc  lbfgsMinOwl.h  sgd.cc  sgd.h  sgdAdagrad.cc  sgdAdagrad.h  sgdDecayingLearningRate.cc  sgdDecayingLearningRate.h  sgdLineSearch.cc  sgdLineSearch.h  sgdRegularizedDualAveraging.cc  sgdRegularizedDualAveraging.h  sgdRegularizedDualAveragingAdagrad.cc  sgdRegularizedDualAveragingAdagrad.h  sgdStochasticAverageGradient.cc  sgdStochasticAverageGradient.h  tron.cc  tron.h
src/optimization/contAlgorithms/specialized/: L1LRPrimal.cc  L1LRPrimal.h  SVCDual.cc  SVCDual.h  SVRDual.cc  SVRDual.h
src/optimization/contFunctions/: ContinuousFunctions.cc  ContinuousFunctions.h  L1HuberSVMLoss.cc  L1HuberSVMLoss.h  L1LeastSquaresLoss.cc  L1LeastSquaresLoss.h  L1LogisticLoss.cc  L1LogisticLoss.h  L1ProbitLoss.cc  L1ProbitLoss.h  L1SmoothSVMLoss.cc  L1SmoothSVMLoss.h  L2HingeSVMLoss.cc  L2HingeSVMLoss.h  L2HingeSVRLoss.cc  L2HingeSVRLoss.h  L2HuberSVMLoss.cc  L2HuberSVMLoss.h  L2LeastSquaresLoss.cc  L2LeastSquaresLoss.h  L2LogisticLoss.cc  L2LogisticLoss.h  L2ProbitLoss.cc  L2ProbitLoss.h  L2SmoothSVMLoss.cc  L2SmoothSVMLoss.h  L2SmoothSVRLoss.cc  L2SmoothSVRLoss.h  contFunctions.h
src/optimization/contFunctions/deprecated/: HingeSVMLoss.cc  HingeSVMLoss.h  HingeSVRLoss.cc  HingeSVRLoss.h  HuberSVMLoss.cc  HuberSVMLoss.h  L1.cc  L1.h  L2.cc  L2.h  LeastSquaresLoss.cc  LeastSquaresLoss.h  LogisticLoss.cc  LogisticLoss.h  ProbitLoss.cc  ProbitLoss.h  SimpleFunctions.cc  SimpleFunctions.h  SmoothSVMLoss.cc  SmoothSVMLoss.h  SmoothSVRLoss.cc  SmoothSVRLoss.h  SumContinuousFunctions.cc  SumContinuousFunctions.h
src/representation/: DenseFeature.cc  DenseFeature.h  FileIO.cc  FileIO.h  Matrix.cc  Matrix.h  MatrixOperations.cc  MatrixOperations.h  Set.cc  Set.h  SparseFeature.cc  SparseFeature.h  SparseGraph.cc  SparseGraph.h  SparseRepresentation.cc  SparseRepresentation.h  Vector.h  VectorOperations.cc  VectorOperations.h  fileHandling.cc  fileHandling.h  jensenRepresentation.h  misc.h  testFeatureRep.cc
src/utils/: arguments.cc  arguments.h  error.cc  error.h  jensenUtils.h  sort.h  totalOrder.h  utils.h
test/: TestClassification.cc  TestClassificationCrossVal.cc  TestClassificationLibSVM.cc  TestJmlr.cc  TestL1HuberSVMLoss.cc  TestL1LeastSquaresLoss.cc  TestL1LogisticLoss.cc  TestL1ProbitLoss.cc  TestL1SmoothSVMLoss.cc  TestL2HingeSVMLoss.cc  TestL2HingeSVRLoss.cc  TestL2HuberSVMLoss.cc  TestL2LeastSquaresLoss.cc  TestL2LogisticLoss.cc  TestL2LogisticLossArgs.cc  TestL2ProbitLoss.cc  TestL2SmoothSVMLoss.cc  TestL2SmoothSVRLoss.cc  argVariables.h
